--- a/Interface/FrmCourseManagementt.resx
+++ b/Interface/FrmCourseManagementt.resx
@@ -1549,10 +1549,53 @@
         XnwP/9k=
 </value>
   </data>
+  <data name="button1.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAEAAAABACAYAAACqaXHeAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAS
+        cwAAEnMBjCK5BwAACAhJREFUeF7Vm3WoFU8Ux0exMVBUbP9Qwe5ARf3LVizEDuzEBBFFEVQQW0wURZFn
+        YyuI3diFCQYmdmHL+f2+82bv3Tt7Nu/u890PfPW+3bNnZufuzpw5M1dQyDx48IAOHTpE27Zto3nz5tGS
+        JUto/PjxNGLECBo5ciSNHj1aHsO5tLQ0OnDgAN2+fZt+//6tPGQsgRvg4cOHtHLlSurUqROVLFmShBCh
+        qGjRotSiRQtasGAB3bp1S5UWHb4aYPv27dSyZUu24lGqfv36tGHDBlWLcHFtgPv371ObNm3Yiv0L1atX
+        j44ePapqlzy2DXD58mUqWLAgW4nMoKxZs9LWrVtVbYPDNkCNGjXYQjOjSpQoQR8+fFA1909CA1y4cIEt
+        JBW0efNmdRf+iDXA8ePHWceppFmzZqm78Y5sgOfPn7MOU1F79+6VN+YV2QC5c+dmnaWq/CDQ23NOUllz
+        5sxRt+eOmDp1KuskldW0aVN1e+6IQYMGsU5SWZUqVVK3545YtWoV6ySV1adPH3V77ogfP36wTlJZJ06c
+        ULfnjuwyu3TpwjpKRSEy9IPA3F1+YJylosDJkyfl/14QQ4YMUR+JsmTJwjpNFX379k3eB55or4iuXbvS
+        8uXL1Z9EzZs3Z51nZpUpU0bVnujGjRtyFusVgVQVnPz9+1cdIjp16pSlkMymqlWrUq5cuWjt2rWq1ung
+        XJUqVdRf7ohRo0bFnP7580cdTgd5Pcy7jfOZQU6xftmyZaVNzZo11RF3EhoAunbtmjoV59y5czL3Z7bL
+        aJUrV07Vhgdjv2GbVANA3bt3V6etnD17VmZ4ixcvbrkubBUoUIB69epFO3fuVKU7Y1yXdAMYmj59ujKz
+        B5nbFStWEEaTOnXqBEqj5cyZk6pXr04DBgyg+fPn0+nTp5V3f0yaNEn689UAw4cPt1RIV9u2benKlSvq
+        Eu98+fKFEGkiZXXp0iXp4/r16/Tr1y/6+vWrsgrGzZs31ac4W7ZskfWtVq2aOuKOmDFjhuWGndS3b1/a
+        tWuXuvzfMHbsWFkXnSNHjsjjDRo0UEfcERg3zTfoR3ny5JFBx6JFi+Rq0Pv375Vb/zx+/JjOnDmj/rIH
+        Yz7KxhBox6dPn9Qnd2QzFi5c2HJzySp79uyyT8C7jW+kZ8+e1KNHD2rdurV8RGvXrp3QX+TPn5++f/8u
+        K8WB0cns36kB/CDgGO+j2XlGC52fExMnTrRcE1oDzJw5U37AaoteSEYIwYsTxiOvK2/evMoiOUT79u1l
+        /AxevHjBFhal0HFx6I+8k4oUKUIdO3aUq81+kbNBvK9mOnfuzBYUhcxzEIPBgweztl7VqlUrevv2rfLm
+        TCwQatiwoTqUzrt376hJkyYW52ErigYwhPDdjYRIkIu3EcREmTg9ePCgKikRP6+Am16+fKm8WmFDYUyH
+        ORDN9e/fP7QZIkJgJGGcsOsEc+TIIRtvypQpckMFZ2MWlv44bOcCtWrVcgxsfv78KSuAULpRo0asDzvt
+        2LFDeUkHvpzghkGsZukcPnyYChUqZLE1dPHiRWUZJ5YQsVPlypVllOeVz58/09WrV2VcvnHjRsLCCyZV
+        EPYKBcVPILRp06YEW7P0vUiCa107YR6ATU3/Ei+hMLBL9+fLl09ZpCP27dvHGrqpQoUKctfXnj176NWr
+        V8pdxmA3GdJBhkuvN7R69Wpl8X8DyH8YoyBCp4Y9PEiojBs3jqZNm0ZYeVq/fj3du3dPFmjm6dOngRuP
+        mw5zPHnyhK2rgcDeADzWnFGY4oYicxq+fPnyhAx1FAwcODChLtCaNWvkOYG9fmDo0KEWo7CkR5oAmSTd
+        DhFcVOhlIassj7dr1y4WjU2ePNliGIY6dOgg/ZvB66HbPXv2TJ0NH3TgenlAILBp3Lix/ANgCNMNk9Xc
+        uXOV9zjIFZhtuHE9TM6fP59QHoT0XCwQWrx4sTJNB+O2fkFQ7d69W3mNo9vgi4gavcx169YlRoLcN4V0
+        l/miIEJL6+g2+hcQBXqZMh+qh8IIaznu3r1L/fr1S7D1Ki6jrNsgcowafTPYsGHD7OcC5gVTnY8fP8ph
+        BNNN7O7mrjcLkygd3QbLcFGDJK65zAkTJpBANGc+qAuvgBcQ1Ozfv18ubIwZM0YGQ0iGlipVSv4eQEcv
+        B3OGqNHLXLhwof0ToAvDpV36KghIY5n9Yxt+lGDvgLk8COsbAsta+gk31a1bV25LxQwtKN26dbP4jZJl
+        y5ZZykMYHspcABnaZs2aEZ6mpUuXymEP8QSyScj1c2kvOQRpfjCfjwq8inp5QP4re0PtZNji0G2QzIgC
+        TMT0sjCigVjNnDIpYejOnTuqpDhYJdLt9GxRGGTLls1SDjptkPDVlC5d2mIYlvCU6bx584a15V6ZoGDV
+        SfePdJ+B5dnkLghLHHZrEGH8jM6ug8eyvQFbq0ePHsndGdzFychuwwVnCyGZEZTevXuzPvUfVfBfiwKp
+        5GLFirGOgooDS+OcLYRkhh/Q4ekRn6GKFSsqqziODWCADsMte+xVdqs1x44dY+0NYRMUprQc2A+A0J0b
+        6gyhf+Pw1ABm8DtCrCjr83k/4vLzAMc5e13IMCErbPdN63LaMuO7AXQQTSGkxPuNDg3rCEiOchUxCyvR
+        HOj8kLrmrgkiZLmcSLoB3MCqD+JwRIQQPnsZ5pC65m7Iq7Bb1MuWncgbIFnwe0CsQXA3yQnbcF6/fq2u
+        difTN4AZ5BWwzjB79mwZWOGn+PiVOdL6wTZoEf0H70YC+UviZx8AAAAASUVORK5CYII=
+</value>
+  </data>
+  <metadata name="toolTip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>17, 17</value>
+  </metadata>
   <data name="btnContent.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAEAAAABACAYAAACqaXHeAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
-        wgAADsIBFShKgAAAABl0RVh0U29mdHdhcmUAd3d3Lmlua3NjYXBlLm9yZ5vuPBoAAAQ0SURBVHhe7ZtJ
+        wQAADsEBuJFr7QAAABl0RVh0U29mdHdhcmUAd3d3Lmlua3NjYXBlLm9yZ5vuPBoAAAQ0SURBVHhe7ZtJ
         SjUxEMcfOM9uFAdEHED0Ag5bdx7AhWu9gdNJHPAM6iFEV95BBcUDeIBI5auKIa8qSSf99eun/YMiryuV
         VPJPpye0pf44jQBYenl4eFDr6+uq1Wp1hW1sbKjHx0ccvZ+gAGdnZ2ySbrDz83OchYxXAFh56uzm5ga9
         9eHt7Y0d3/X1tfE/PT2hl8crAJ32dZw8sLa2Jo7v6upK18F28OEVgFSsK6HxxYy/EQBLlpgOOklofDHj
@@ -1574,13 +1617,10 @@
         RU5ErkJggg==
 </value>
   </data>
-  <metadata name="toolTip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>17, 17</value>
-  </metadata>
   <data name="btnClass.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAEAAAABACAYAAACqaXHeAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
-        wAAADsABataJCQAAABl0RVh0U29mdHdhcmUAd3d3Lmlua3NjYXBlLm9yZ5vuPBoAAAiLSURBVHhe5ZsJ
+        vwAADr8BOAVTJAAAABl0RVh0U29mdHdhcmUAd3d3Lmlua3NjYXBlLm9yZ5vuPBoAAAiLSURBVHhe5ZsJ
         6ExfFMdH9n3NTkIoKdlD9rJL2Sm7EFEo+xolZYvs2SVkyU5C2WXJLspOluxbtq7f98w5b+68ue/Nm9/M
         m3/P/1OHueeeu53fe3PvPfdOSKWRgwcPquHDh6v69eurggULqlAopLJkyaIqVKigWrdurebOnaueP3/O
         1ukhLQ4YNmwYDdYuOXPmNOrz589PzkoHvjpgy5YtUQPr2bOnOn78OOdG8+rVK7V8+XJVpkwZy75cuXKc
