--- a/Interface/Properties/Resources.resx
+++ b/Interface/Properties/Resources.resx
@@ -133,4 +133,7 @@
   <data name="trash_24_icon" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\trash-24-icon.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="white" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\white.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
